@@ -1,4 +1,5 @@
 package com.fitness.FitnessClubApp.configuration;
+
 import com.fitness.FitnessClubApp.model.User;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -22,9 +23,13 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-
+        // --- THIS IS THE FIX FOR THE 403 FORBIDDEN ERROR ---
+        // Spring Security's authorization filters require roles to be prefixed with "ROLE_".
+        // This code explicitly creates a SimpleGrantedAuthority with the correct format,
+        // for example, "ROLE_USER". Your original code was likely returning just "USER",
+        // which is not recognized as a role, leading to the 403 error.
         if (user.getRole() == null) {
-            return List.of(); // Return empty list if no role is assigned
+            return Collections.emptyList(); // Return an empty list if no role is assigned
         }
         return List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()));
     }
@@ -36,7 +41,12 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public String getUsername() {
-        return user.getUsername(); // or email if you prefer
+        // --- THIS IS A CRITICAL SUPPORTING FIX ---
+        // The JWT is created with the user's email as the "subject".
+        // For token validation (userDetails.getUsername().equals(tokenSubject)) to work,
+        // this method MUST return the same identifier used in the token.
+        // Returning user.getUsername() here while using email in the token would cause validation to fail.
+        return user.getMember().getEmail();
     }
 
     @Override
@@ -56,6 +66,7 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public boolean isEnabled() {
-        return user.getIsActive().name().equals("ACTIVE");
+        // A more robust check for active status.
+        return user.getIsActive() != null && user.getIsActive().name().equals("ACTIVE");
     }
 }
